# framework.uifw.xorg.app.xorg-launch-helper

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  xorg.service.in
packaging/: xorg-launch-helper.changes  xorg-launch-helper.manifest  xorg-launch-helper.spec  xorg.conf
src/: Makefile.am  Makefile.in  main.c
